--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "embla-carousel-class-names": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.358.0",
-    "next": "14.1.3",
+    "next": "^14.1.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "^8.10.0",
