--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-flow-renderer": "^10.3.17",
     "reactflow": "^11.10.4",
     "recharts": "^2.12.3",
+    "recoil": "^0.7.7",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0"
